--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!doctype html>
 <html>
-    <head>
-        <title>coursera-course</title>
-    </head>
-    <body>
-        <h1>coursera-course</h1>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>coursera-course</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div>
+    <a href="module2-solution/index.html"><p>module2-solution</p></a>
+  </div>
+</body>
 </html>
