--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <div>
-    <a href="module2-solution/index.html"><p>module2-solution</p></a>
+    <a href="module2-solution"><p>module2-solution</p></a>
+    <a href="module3-solution"><p>module3-solution</p></a>
   </div>
 </body>
 </html>
