--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div>
     <a href="module2-solution"><p>module2-solution</p></a>
     <a href="module3-solution"><p>module3-solution</p></a>
+    <a href="module4-solution"><p>module4-solution</p></a>
   </div>
 </body>
 </html>
